# pySigma-backend-tracee

./: .gitignore  .gitlab-ci.yml  README.md  convert.py  pyproject.toml
deploy/: crd-tracee-policy.yaml  toOpensearch.tmpl  toOpensearch.tmpl.pretty
deploy/crd-job/chart/: Chart.yaml  values.yaml
deploy/crd-job/chart/templates/: crd-tracee-policy.yaml  gitlab-registry-secret.yaml
sigma-rules/: change_authorized_keys.yml  execute_mount_command.yml  non_local_network_connection.yml
sigma/backends/tracee/: __init__.py  tracee.py
sigma/pipelines/tracee/: __init__.py  tracee.py
