[tool.poetry]
name = "pysigma-backend-tracee"
version = "0.3.2"
description = "pySigma Tracee processing pipelines"
authors = ["Henrik Wittemeier <henrik.wittemeier@th-koeln.de>"]
license = "LGPL-2.1-only"
readme = "README.md"

packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pySigma = "0.11.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
